# osint_comments

./: .gitignore  Dockerfile.analyzer  README.md  Trippelskvis_ – Noe vi alle frykter – E24.html  check_article.py  check_db.py  docker-compose.yml  page.html  pyproject.toml  restart_app.bat  run_app.bat  test_comments.py  update_article.py
api/: run.py
api/app/: __init__.py  main.py
api/app/adapters/: __init__.py  e24_integration_adapter.py
api/app/routers/: __init__.py  analysis.py  comments.py  crawler.py  websocket.py
api/app/services/: websocket_service.py
api/e24_cache/: crawled_urls.json
crawler/: README.md  __init__.py  __main__.py  article_repository.py  cli.py  crawler_service.py  integration.py  models.py  requirements.txt  setup.py  test_crawler.py  web_scraper.py
e24_cache/: crawled_urls.json
frontend/: README.md  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/: ArticleList.vue  CommentList.vue  LogStream.vue
frontend/src/router/: index.js
frontend/src/views/: Analysis.vue  ArticleDetail.vue  (+4 more)
osint_comments/: README.md  analysis_models.py  analyzer_service.py  api_client.py  comment_analyzer.py  config.py  e24_integration.py  kafka_consumer.py  kafka_producer.py  llm_client.py  main.py  models.py  osint_comments.db  repository.py
osint_comments/tests/: conftest.py  test_analysis_models.py  test_analyzer_service.py  test_api_client.py  test_comment_analyzer.py  test_e24_integration.py  test_kafka_consumer.py  test_llm_client.py  test_repository.py
