[tool.poetry]
name = "osint-comments"
version = "0.1.0"
description = "scraping comments of e24"
authors = ["Fredrik Skatland"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
sqlalchemy = "^2.0.38"
rich = "^13.9.4"
pytest = "^8.3.4"
kafka-python = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
